--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.2",
     "web-vitals": "^2.1.4"
